add job error handling and health check
Added a wrapper function that catches errors thrown in job processors 
and passes them to done() so errors don't lock agenda. Previously, 
failed jobs would prevent any further jobs from running because done() 
was never called. Added an endpoint for health checking that looks at 
the time of the last crawl and most recent article scraped. Added "jest" 
test library and a couple unit tests for the new health check endpoint.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.6"
 
-services:  
+services:
 
   browserless:
     build: ./browserless
@@ -25,6 +25,8 @@ services:
 
   scraper:
     build: ./scraper
+    volumes:
+      - ./scraper/src/:/app/src/
     environment:
       - BROWSERLESS=ws://browserless:3000
       - MONGO=mongodb://mongo/test
