--- a/scraper/package.json
+++ b/scraper/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,8 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.13",
     "puppeteer-core": "^1.8.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
